TestSuite/errors/err0383.pas
begin
  var x := 3??2;
end.